@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,22 +22,31 @@
  */
 
 /*
+ *
  * @test
- * @bug 4302966 8176841
- * @modules jdk.localedata
- * @summary In Czech Republic first day of week is Monday not Sunday
+ * @bug 8176841
+ * @summary Tests LocaleNameProvider SPIs
+ * @library provider
+ * @build provider/module-info provider/foo.LocaleNameProviderImpl
+ * @run main/othervm -Djava.locale.providers=SPI LocaleNameProviderTests
  */
 
-import java.util.Calendar;
 import java.util.Locale;
 
-public class Bug4302966 {
+/**
+ * Test LocaleNameProvider SPI with BCP47 U extensions
+ *
+ * Verifies getUnicodeExtensionKey() and getUnicodeExtensionType() methods in
+ * LocaleNameProvider works.
+ */
+public class LocaleNameProviderTests {
+    private static final String expected = "foo (foo_ca:foo_japanese)";
 
-    public static void main(String[] args) {
-        Calendar czechCalendar = Calendar.getInstance(new Locale("cs", "CZ"));
-        int firstDayOfWeek = czechCalendar.getFirstDayOfWeek();
-        if (firstDayOfWeek != Calendar.MONDAY) {
-            throw new RuntimeException();
+    public static void main(String... args) {
+        String name = Locale.forLanguageTag("foo-u-ca-japanese").getDisplayName(new Locale("foo"));
+        if (!name.equals(expected)) {
+            throw new RuntimeException("Unicode extension key and/or type name(s) is incorrect. " +
+                "Expected: \"" + expected + "\", got: \"" + name + "\"");
         }
     }
 }
